--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^8.12",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
+        "maatwebsite/excel": "^3.1",
         "mews/captcha": "^3.2"
     },
     "require-dev": {
